2015-11-17  Charlie Zender  <zender@uci.edu>

	* Add latt_bounds, latu_bounds, lont_bounds, lonu_bounds to regrid exclusion list (for CICE) as per Wenshan

	* Initialize lat/lon/col_nm_out in nco_grd_mk() skeleton code (broken in 4.5.3?)

2015-11-12  Charlie Zender  <zender@uci.edu>

	* Remove "l" suffix from NC_LONG integer constants (which are deprecated) so buggy ncgen 4.4.0 can parse in.cdl

2015-11-09  Charlie Zender  <zender@uci.edu>

	* Thoroughly run autoconf to propagate GSL changes

2015-11-08  Charlie Zender  <zender@uci.edu>

	* Add hyai, hybi to in.cdl and prs_dlt example to manual

2015-11-08  Henry Butowsky  <henryb@hush.com>

	* Support GSL library version 2.x. Modify configure.ac, config.h.in. Add tokens:
          #define NCO_GSL_VERSION = 100 * NCO_GSL_MAJOR_VERSION + NCO_GSL_MINOR_VERSION

	* Downstream GSL mods in fmc_gsl_cls.cc, fmc_gsl_cls.hh

2015-10-30  Charlie Zender  <zender@uci.edu>

	* Add stdin infrastructure for passing regridding file list

	* NCO 4.5.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha01 final changes';git push
	git tag -a 4.5.4-alpha01 -m 'Version 4.5.4-alpha01 tag:	100% Geometry';git push --tags

	* Check-for and if found, retain, record dimension property during regridding

2015-10-27  Charlie Zender  <zender@uci.edu>

	* Ensure dim[idx].val.vp is NULL-initialized (and thus not inadvertently free'd) when PRN_DMN_IDX_CRD_VAL is False
	Fixes GitHub issue #18 reported by Pat Nichols

2015-10-21  Charlie Zender  <zender@uci.edu>

	* Change ncap2 token names to, e.g., NCAP_FLOAT, NCAP_INT, etc to prevent namespace clashes with FLOAT, INT, ... in MSVC windef.h

2015-10-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3 release procedure:
 	Changes since nco-4.5.2: nfr skl crv snwe frc_out bugs airs ncecat gag ncatted del
	cd ~/nco;git commit -a -m 'Version 4.5.3 release final changes';git push
	git tag -d 4.5.3;git push origin :refs/tags/4.5.3